force-app/main/default/objects/tdc_tra__Roll_Up_Filter__c/tdc_tra__Roll_Up_Filter__c.object-meta.xml
<CustomObject>
    <label>Roll Up Criteria</label>
    <nameField>
        <label>Roll Up Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roll Up Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>