force-app/main/default/objects/tdc_tra__Roll_Up_Filter__c/fields/tdc_tra__ChildFieldObject__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__ChildFieldObject__c</fullName>
    <label>ChildFieldObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>