force-app/main/default/objects/tdc_tra__Roll_Up_Filter__c/fields/tdc_tra__Order__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>