force-app/main/default/objects/tdc_tra__Roll_Up_Filter__c/fields/tdc_tra__Rollup_Detail__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Rollup_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rollup Detail</label>
    <referenceTo>tdc_tra__Rollup_Detail__c</referenceTo>
    <relationshipName>Roll_Up_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>